--- a/event_registration.html
+++ b/event_registration.html
@@ -59,7 +59,7 @@
     </div>
 
     <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform"
+      src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=sharing"
       title="Event Registration Form">
     </iframe>
   </div>
