--- a/event_registration.html
+++ b/event_registration.html
@@ -69,7 +69,8 @@
     const mealPrice = 50; // Price per person per day
 
     // Elements
-    const numParticipantsInput = document.getElementById('num-participants');
+    const numParticipantsInput = document.getElementById('entry.1607513178');
+  //  const numParticipantsInput = document.getElementById('num-participants');
     const numNightsInput = document.getElementById('num-nights');
     const numDaysInput = document.getElementById('num-days');
     const totalFeeElement = document.getElementById('total-fee');
