--- a/event_registration.html
+++ b/event_registration.html
@@ -71,8 +71,10 @@
     // Elements
     const numParticipantsInput = document.getElementById('entry.1607513178');
   //  const numParticipantsInput = document.getElementById('num-participants');
-    const numNightsInput = document.getElementById('num-nights');
-    const numDaysInput = document.getElementById('num-days');
+    const numNightsInput = document.getElementById('entry.523040310');
+   // const numNightsInput = document.getElementById('num-nights');
+    const numDaysInput = document.getElementById('entry.308155383');
+   // const numDaysInput = document.getElementById('num-days');
     const totalFeeElement = document.getElementById('total-fee');
 
     // Calculate total fee
