--- a/event_registration.html
+++ b/event_registration.html
@@ -69,7 +69,9 @@
     const mealPrice = 50; // Price per person per day
 
     // Elements
-    const numParticipantsInput = document.getElementById('entry.1607513178');
+    //const numParticipantsInput = document.getElementById('entry.1607513178');
+    const numParticipantsInput = document.getElementById('wSDd7b');
+    
   //  const numParticipantsInput = document.getElementById('num-participants');
     const numNightsInput = document.getElementById('entry.523040310');
    // const numNightsInput = document.getElementById('num-nights');
