--- a/event_registration.html
+++ b/event_registration.html
@@ -59,12 +59,13 @@
     </div>
 
     <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=sharing"
+      src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=dialog"
       title="Event Registration Form">
     </iframe>
   </div>
 
   <script>
+     //src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=sharing"
     const hotelPrice = 100; // Price per person per night
     const mealPrice = 50; // Price per person per day
 
