--- a/event_registration.html
+++ b/event_registration.html
@@ -59,19 +59,20 @@
     </div>
 
     <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=dialog"
+      src="https://docs.google.com/forms/d/1Hj9XlnPqFrnXn9h_88SGK556QpPxsIDlym3oEBGcBnY/prefill"
       title="Event Registration Form">
     </iframe>
   </div>
 
   <script>
+    //src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=dialog"
      //src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=sharing"
     const hotelPrice = 100; // Price per person per night
     const mealPrice = 50; // Price per person per day
 
     // Elements
-    //const numParticipantsInput = document.getElementById('entry.1607513178');
-    const numParticipantsInput = document.getElementById('wSDd7b');
+    const numParticipantsInput = document.getElementById('entry.1607513178');
+    //const numParticipantsInput = document.getElementById('wSDd7b');
     
   //  const numParticipantsInput = document.getElementById('num-participants');
     const numNightsInput = document.getElementById('entry.523040310');
