--- a/event_registration.html
+++ b/event_registration.html
@@ -81,6 +81,7 @@
    // const numDaysInput = document.getElementById('num-days');
     const totalFeeElement = document.getElementById('total-fee');
 
+    console.log("numParticipantsInput: ", numParticipantsInput);
     // Calculate total fee
     function calculateTotalFee() {
       const numParticipants = parseInt(numParticipantsInput.value) || 0;
