--- a/event_registration.html
+++ b/event_registration.html
@@ -48,13 +48,13 @@
   method="POST"
   target="iframe">
   <label for="name">Name:</label>
-  <input type="text" name="entry.123456" id="name" required>
+  <input type="number" name="entry.1607513178" id="name" required>
 
   <label for="email">Email:</label>
-  <input type="email" name="entry.789012" id="email" required>
+  <input type="number" name="entry.523040310" id="email" required>
 
   <label for="participants">Number of Participants:</label>
-  <input type="number" name="entry.345678" id="participants" required>
+  <input type="number" name="entry.308155383" id="participants" required>
 
   <button type="submit">Submit</button>
 </form>
