--- a/event_registration.html
+++ b/event_registration.html
@@ -47,14 +47,18 @@
   action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/formResponse"
   method="POST"
   target="iframe">
-  <label for="name">Name:</label>
+  <label for="成人人數 (12 歲或以上)*">成人人數 (12 歲或以上)*:</label>
   <input type="number" name="entry.1607513178" id="name" required>
 
-  <label for="email">Email:</label>
+  <label for="兒童(4 至11 歲) 人數*">兒童(4 至11 歲) 人數*:</label>
   <input type="number" name="entry.523040310" id="email" required>
 
-  <label for="participants">Number of Participants:</label>
+  <label for="兒童(4 歲以下) 人數*">兒童(4 歲以下) 人數*:</label>
   <input type="number" name="entry.308155383" id="participants" required>
+
+  <label for="參加類別">參加類別:</label>
+  <input type="text" name="entry.1109016814" id="participants" required>
+
 
   <button type="submit">Submit</button>
 </form>
