--- a/event_registration.html
+++ b/event_registration.html
@@ -48,16 +48,20 @@
   method="POST"
   target="iframe">
   <label for="成人人數 (12 歲或以上)*">成人人數 (12 歲或以上)*:</label>
-  <input type="number" name="entry.1607513178" id="name" required>
+  <input type="number" name="entry.1607513178" id="adults" required>
 
   <label for="兒童(4 至11 歲) 人數*">兒童(4 至11 歲) 人數*:</label>
-  <input type="number" name="entry.523040310" id="email" required>
+  <input type="number" name="entry.523040310" id="children" required>
 
   <label for="兒童(4 歲以下) 人數*">兒童(4 歲以下) 人數*:</label>
-  <input type="number" name="entry.308155383" id="participants" required>
+  <input type="number" name="entry.308155383" id="infants" required>
 
   <label for="參加類別">參加類別:</label>
-  <input type="text" name="entry.1109016814" id="participants" required>
+  <input type="text" name="entry.1109016814" id="duration" required>
+    
+  <label for="住宿安排">住宿安排:*</label>
+  <input type="text" name="entry.438181447" id="accomodation" required>
+
 
 
   <button type="submit">Submit</button>
