--- a/event_registration.html
+++ b/event_registration.html
@@ -62,6 +62,10 @@
   <label for="住宿安排">住宿安排:*</label>
   <input type="text" name="entry.438181447" id="accomodation" required>
 
+ <label for="Townhouse 數目">Townhouse 數目:*</label>
+  <input type="number" name="entry.307969292" id="accomodation">
+
+
 
 
   <button type="submit">Submit</button>
