--- a/event_registration.html
+++ b/event_registration.html
@@ -42,9 +42,11 @@
     }
   </style>
 </head>
+
+  <!--action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/formResponse"-->
 <body>
   <form
-  action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/formResponse"
+  action="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=pp_url"
   method="POST"
   target="iframe">
   <label for="成人人數 (12 歲或以上)*">成人人數 (12 歲或以上)*:</label>
