--- a/event_registration.html
+++ b/event_registration.html
@@ -47,7 +47,7 @@
   <!--action="https://docs.google.com/forms/d/1Hj9XlnPqFrnXn9h_88SGK556QpPxsIDlym3oEBGcBnY/prefill"-->
 <body>
   <form
-  action="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=pp_url"
+  action="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=pp_url&"
   method="POST"
   target="iframe">
   <label for="成人人數 (12 歲或以上)*">成人人數 (12 歲或以上)*:</label>
