--- a/event_registration.html
+++ b/event_registration.html
@@ -68,7 +68,7 @@
  <label for="Townhouse 數目">Townhouse 數目:*</label>
   <input type="number" name="entry.307969292" id="accomodation">
 
-
+  action="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=pp_url&"+"entry.1607513178="+entry.1607513178
 
 
   <button type="submit">Submit</button>
