--- a/event_registration.html
+++ b/event_registration.html
@@ -49,6 +49,8 @@
   <form
   action="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=pp_url&"
   method="POST"
+  name="prefill"
+  onsumbit="return OnSubmitForm();">
   target="iframe">
   <label for="成人人數 (12 歲或以上)*">成人人數 (12 歲或以上)*:</label>
   <input type="number" name="entry.1607513178" id="adults" required>
@@ -67,9 +69,6 @@
 
  <label for="Townhouse 數目">Townhouse 數目:*</label>
   <input type="number" name="entry.307969292" id="accomodation">
-
-  action="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=pp_url&"+"entry.1607513178="+entry.1607513178
-
 
   <button type="submit">Submit</button>
 </form>
@@ -138,3 +137,11 @@
   </script>
 </body>
 </html>
+
+<script type="text/javascript">
+  function OnSubmitForm()
+    {
+        document.prefill.action="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=pp_url&"+"entry.1607513178="+entry.1607513178
+        
+    }
+</script>
