--- a/event_registration.html
+++ b/event_registration.html
@@ -50,7 +50,7 @@
   action="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=pp_url&"
   method="POST"
   name="prefill"
-  onsumbit="return OnSubmitForm();">
+  onsubmit="return OnSubmitForm();"
   target="iframe">
   <label for="成人人數 (12 歲或以上)*">成人人數 (12 歲或以上)*:</label>
   <input type="number" name="entry.1607513178" id="adults" required>
