--- a/event_registration.html
+++ b/event_registration.html
@@ -51,8 +51,8 @@
   action="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=pp_url&"
   method="POST"
   name="prefill"
-  onsubmit="return OnSubmitForm();"
-  target="iframe">
+  onsubmit="return OnSubmitForm();">
+  <!-- target="iframe">  -->
   <label for="成人人數 (12 歲或以上)*">成人人數 (12 歲或以上)*:</label>
   <input type="number" name="entry.1607513178" id="adults" required>
 
@@ -71,17 +71,17 @@
  <label for="Townhouse 數目">Townhouse 數目:*</label>
   <input type="number" name="entry.307969292" id="accomodation">
 
-  <button type="submit">Submit</button>
+  <button type="submit">Get Form Url</button>
 </form>
 
-<!-- Embed the Google Form in an iframe for users to verify their inputs -->
+<!-- Embed the Google Form in an iframe for users to verify their inputs 
 <iframe
   src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform"
   width="100%"
   height="800"
   frameborder="0">
 </iframe>
-
+-->
   <div class="form-container">
     <div class="calculator">
       <h3>Fee Calculator</h3>
