--- a/event_registration.html
+++ b/event_registration.html
@@ -51,8 +51,8 @@
   action="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=pp_url&"
   method="POST"
   name="prefill"
-  onsubmit="return OnSubmitForm();">
-  <!-- target="iframe">  -->
+  onsubmit="return OnSubmitForm();"
+  target="iframe"> 
   <label for="成人人數 (12 歲或以上)*">成人人數 (12 歲或以上)*:</label>
   <input type="number" name="entry.1607513178" id="adults" required>
 
@@ -82,7 +82,7 @@
   frameborder="0">
 </iframe>
 -->
-  <div class="form-container">
+<!--  <div class="form-container">
     <div class="calculator">
       <h3>Fee Calculator</h3>
       <label for="num-participants">Number of Participants:</label>
@@ -96,13 +96,13 @@
 
       <p class="total">Total Fee: $<span id="total-fee">0</span></p>
     </div>
-
+-->
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=dialog"
       title="Event Registration Form">
     </iframe>
   </div>
-
+  
   <script>
     //src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=dialog"
      //src="https://docs.google.com/forms/d/e/1FAIpQLScJx4zB1uZNIlGHUG4fJ5-amtI7Ie-YL9FCY7JaT5NtU5trfg/viewform?usp=sharing"
